docs: complete map generation

--- a/saves/map_generation/index.html
+++ b/saves/map_generation/index.html
@@ -32,7 +32,7 @@
         <div class="container">
             <h2>epic cool game</h1>
             <p>not very cool, but stil very cool</p>
-            <canvas id="gameCanvas" style="background-color: #ffffff;width: 100%;aspect-ratio: 16 / 9;"></canvas>
+            <canvas id="gameCanvas" style="background-color: #72751b;width: 100%;aspect-ratio: 16 / 9;"></canvas>
         </div>
     </div>
 </body>
